--- a/src/views/login/login.html
+++ b/src/views/login/login.html
@@ -8,13 +8,9 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
-    <!-- <noscript>
+    <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript> -->
-    <!-- <div id="app"></div> -->
-    <!-- built files will be auto injected -->
+    </noscript>
+    <div id="login"></div>
   </body>
-  <script>
-	  location.href="register.html";
-  </script>
 </html>
