--- a/src/views/userMain/userMain.html
+++ b/src/views/userMain/userMain.html
@@ -6,15 +6,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+	<!-- <script src="../../assets/bootstrap-3.3.7/js/bootstrap.min.js"></script>
+	<script src="./js/toastr.js"></script>
+	<link rel="stylesheet" href="../../assets/bootstrap-3.3.7/css/bootstrap.min.css" />
+	<link rel = "stylesheet" href="./css/toastr.css" /> -->
   </head>
   <body>
-    <!-- <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript> -->
-    <!-- <div id="app"></div> -->
-    <!-- built files will be auto injected -->
+    <div id="userMain"></div>
   </body>
-  <script>
-	  location.href="register.html";
-  </script>
 </html>
